# cortex-xsiam-mcp-gateway

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE.md  README.md  REVIEW.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codex/prompts/: review.md
.github/instructions/: security-review.instructions.md
.github/workflows/: ci.yml  claude-review.yml  codeql.yml  codex-review.yml  dependabot-auto-merge.yml  dependency-alert-report.yml  dependency-review.yml  release.yml  scorecard.yml
LICENSES/: Apache-2.0.txt
docs/: AGENT_LOG_SEARCH.md  AI_REVIEW.md  ARCHITECTURE.md  AUDIT_LOGGING.md  CLAUDE_CODE_LOG_SEARCH_TESTING.md  CONFIGURATION.md  DEPENDENCY_REMEDIATION.md  ENTERPRISE_DEPLOYMENT.md  NATURAL_LANGUAGE_XQL.md  RBAC_AND_LOG_SEARCH_REVIEW.md  RELEASES.md  ROADMAP.md  SECURITY_MODEL.md
scripts/: evaluate_agent_plans.py
src/: README.md  cli.py  main.py  version.py
src/config/: config.py
src/entities/: MCPContext.py  exceptions.py  llm_config.py
src/entities/resources/: cases_response.json  issues_response.json
src/pkg/: client.py  setup_logging.py  util.py
src/pkg/openapi/: openapi.py  openapi.yaml
src/service/cortex_mcp/: audit_middleware.py  identity_middleware.py  server.py  tool_policy_middleware.py
src/usecase/: README.md  audit.py  base_module.py  credential_broker.py  dataset_query.py  fetcher.py  identity.py  log_policy.py  module_util.py  tool_policy.py  xql_builder.py  xql_discovery.py  xql_executor.py  xql_results.py
src/usecase/builtin_components/: cases.py  datasets.py  issues.py  logs.py
src/usecase/builtin_components/openapi/: get_assessment_results.yaml  get_asset_by_id.yaml  get_assets.yaml  get_filtered_endpoints.yaml  get_tenant_info.yaml  get_vulnerabilities.yaml
tests/: conftest.py  test_agent_evaluator.py  test_agent_log_workflow.py  test_audit.py  test_dataset_query.py  test_identity_policy_credentials.py  test_logs.py  test_mcp_contract.py  test_security_regressions.py  test_xql_discovery.py  test_xql_executor.py  test_xsiam_live.py
tests/agent_eval/: cases.json  response.schema.json
