[tool.poetry]
name = "CortexMCP"
version = "0.1.0a1"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.139.0"
uvicorn = {version = "^0.51.0", extras = ["standard"]}
types-requests = "^2.33.0.20260518"
requests = "^2.34.2"
fastmcp = "3.4.4"
mcp = "^1.28.1"
starlette = "^1.3.1"
authlib = "^1.7.2"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.20"
black = "^26.5.1"
mypy = "^2.2.0"
pytest = "^9.1.1"
pre-commit = "^4.6.0"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
fix = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501" # line too long
]
